app/assets/stylesheets/canvas/config/_base.scss
/* ... */
.btn-link:focus, .btn-link-grey:focus{
  border: 0;
  box-shadow: none;
  color: $primary-hover;
}

.dropdown-wrapper{
  background: $white;
  @include border-radius($radius);
  padding: 0;
  select{
    -webkit-appearance: none;
    -moz-appearance: window !important;
    appearance: none;
    text-indent: 0.01px;
    text-overflow: '';
    background: transparent;
    font-size: 16px;
    width: 100%;
    padding: 5px 10px !important;
    line-height: 1.2;
    z-index: 20;
    border-color: $grey-3;
    
  }
  select::-ms-expand {
		display: none; /* to ie 10 */
	}
}

.dropdown-wrapper:after{
  content:"";
  width:0;
  height:0;
  border-style: solid;
  border-width: 8px 7.5px 0 7.5px;
  border-color: $grey-4 transparent transparent transparent;
  top: 50%;
  right: 10px;
  position: absolute;
  margin-top: -2px;
  z-index: 10;
}

.moz-appearance .dropdown-wrapper{
	 border: 1px solid $grey-1 !important;
}

.select-options{
  position: absolute;
  overflow: hidden;
  background: #fff;
  margin:4px 0 0;
  z-index: 2000;
  @include border-radius($radius);
  box-shadow:1px 2px 2px 0 rgba(0,0,0,0.1);
}

.select-options .drop-holder {
  border: 1px solid #c4c4c4;
  overflow: hidden;
  @include border-radius($radius);
  height: 1%;
}

.select-options ul {
  list-style: none;
  overflow: hidden;
  padding: 0;
  margin: 7px 0 9px;
  font-size:14px;
  line-height:18px;
  font-weight:bold;
}

.select-options ul li {
  width: 100%;
  float: left;
}

.select-options ul a {
  text-decoration: none;
  padding: 4px 14px 3px;
  display: block;
  cursor: default;
  color: #000;
  height: 1%;
}

.select-options .item-selected a {
  text-decoration: none;
  background: #ebebeb;
  color: #000;
}

/* select options optgroup example styles */
.select-options .optgroup { clear: both; }
.select-options .optgroup strong {
  display: block;
  padding: 5px;
}

.select-options .optgroup ul a {
  padding-left: 30px;
}

body:not(.mozilla){
  .placeholder-labels{
    .form-control{
      &:focus{
        &::-webkit-input-placeholder{
          top: -25px;
          visibility: visible !important;
          font-size: 14px;
          transition: .15s ease-out;
        }  
        &::shadow{
          top: 15px;
          background: red;
        }
      }
      &::-webkit-input-placeholder{
        position: relative;
        transition: 0s ease-out;
        top: 0;
      }
    }
    .input-lg{
      &:focus{
        height: 68px;
        padding-top: 25px;
      }
    }
    textarea{
      &:focus{
        padding-top: 30px;
      }
    }
  }
}

.validation{
  background: $red;
  color: $white;
  padding-bottom: 0px;
  padding-left: 15px;
  font-size: 12px;
  bottom: -5px;
  margin-top: -5px;
  border-top-left-radius: $radius;
  border-top-right-radius: $radius;
  display: block;
  height: 0;
  z-index: 5;
  transition: .2s ease-out;
  white-space: nowrap;
  &.active{
    height: 25px;
  }
}

.has-error .form-control:focus {
  border-color: $red;
  box-shadow: none;
}



/* -------------------- BUTTONS -------------------- */

button{
  &:active{
		@include box-shadow(none);
		outline: 0 !important;
	}
  &:focus{
		outline: 0 !important;
	}
	&:active:focus{
  	outline: 0 !important;
	}
}

.btn{
	font-weight: 400;
	font-size: 16px;
	@include border-radius($radius);
	@include transition($transition);
	@include box-shadow(none);
	text-shadow: 0;
	background-image: none;
	border: none;
	&:active{
		@include box-shadow(none);
		outline: 0 !important;
	}
	&:focus{
		outline: 0 !important;
	}
	&:active:focus{
  	outline: 0 !important;
	}
	&:disabled{
  	cursor: not-allowed;
	}
	&.bold{
  	font-weight: 600;
	}
}

.btn-uppercase{
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-weight: 600;
}

.btn-sm{
  padding: 5px 20px;
}

.btn-md{
  padding: 10px 20px;
}

.btn-lg{
  padding: 15px 20px;
  font-weight: 600;
  font-size: 18px;
}

.btn-xl{
  padding: 25px 45px;
  text-transform: uppercase;
}

.btn-group-xl{
  .btn{
    padding: 25px 45px;
  }
}

@media (max-width: 767px){
  .btn-mobile-block{
    display: block;
    width: 100%;
  }
}

.btn-primary{
	background: $primary-color;
	border: 1px solid $primary-color;
	font-weight: 600;
	color: $white;
	&:link, &:visited{
		color: $white;
	}
	&:hover, &:focus, &:active{
		background: $primary-hover;
		border-color: $primary-hover;
	}
}

.btn-default{
	background: none;
	border: 1px solid $grey-3;
	color: $grey-5;
	&:link, &:visited{
		color: $grey-5;
	}
	&:hover, &:focus, &:active{
	  background: $primary-hover;
		border: 1px solid $primary-hover;
		color: $white;
	}
}

.btn-white{
	background: $white;
	color: $primary-color;
	&:link, &:visited{
		color: $primary-color;
	}
	&:hover, &:focus, &:active{
	  background: $primary-hover;
		color: $white;
	}
}

.btn-dark{
	background: $grey-6;
	color: $white;
	&:link, &:visited{
		color: $white;
	}
	&:hover, &:focus, &:active{
	  background: $grey-5;
		color: $white;
	}
}

.btn-light{
	background: $grey-5;
	color: $white;
	&:link, &:visited{
		color: $white;
	}
	&:hover, &:focus, &:active{
	  background: $primary-hover;
		color: $white;
	}
}

.btn-green{
	background: $green;
	color: $white;
	&:link, &:visited{
		color: $white;
	}
	&:hover, &:focus, &:active{
	  background: lighten($green, 10);
		color: $white;
	}
}

.btn-link{
  &:link, &:visited{
	  color: $primary-color;
	}
	&:hover{
		color: $primary-hover;
		text-decoration: none;
	}
}

.btn-link-grey{
  color: $grey-6;
  &:link, &:visited{
	  color: $grey-6;
	}
	&:hover{
		color: $primary-hover;
		text-decoration: none;
	}
}

.btn-link-red{
  color: $red;
  &:link, &:visited{
	  color: $red;
	}
	&:hover{
		color: lighten($red, 15);
		text-decoration: none;
	}
}


.btn-link-basic{
  &:link, &:visited{
	  color: $primary-color;
  }
  &:hover{
    color: $primary-hover;
  }
}

.btn-hover-spin{
  .icon{
    transition: $transition ease-out;
  }
  &:hover{
    .icon{
      transform: rotate(180deg) scale(-1, 1) translate(0, 1px);
    }
  }
}
/* ... */

